# qn-guide-examples

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_README.md
.claude/: settings.local.json
AI/coinbase-ai-agent/: .env.example  .gitignore  README.md  package.json
AI/evm-mcp-server/: .env.sample  README.md  chains.ts  claude_desktop_config.json  clients.ts  index.ts  package.json  prompts.ts  resources.ts  tools.ts  tsconfig.json
AI/solana-mcp/: README.md  claude_desktop_config.json  index.ts  package.json  tsconfig.json
QuickAlerts/Telegram_bot/: README.md  index.js  package-lock.json  package.json
QuickAlerts/Twitter_bot/: README.md  index.js  package-lock.json  package.json
Streams/: README.md  app.js  package-lock.json  package.json
Streams/ai-bot-discord/: .env.example  README.md  main.js  package.json
Streams/dex-metrics-dashboard/: package-lock.json  package.json
Streams/qs-react-app/: README.md  package-lock.json  package.json
Streams/userstream/: .env.example  .gitignore  README.md  package.json  vitest.config.ts
Streams/wallet-allowance-checker-app/: README.md  example.env  package-lock.json  package.json  server.js
admin-api/grafana-dashboard/: README.md  docker-compose.yaml
admin-api/usage-alerting/: PROMETHEUS.md  README.md  package-lock.json  package.json
base/telegram-trading-bot/: .env.example  .gitignore  README.md  (+5 more)
scripts/: generate-directory.js  pre-commit-tree.sh
solana/yellowstone/rust/pumpfun/: Cargo.toml  README.md
solana/yellowstone/rust/pumpfun/src/: main.rs
tron/: README.md
(+1497 files in other folders)
